<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

  <RelativeLayout
      android:id="@+id/titleLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/titleEditText"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:gravity="top"/>
  </RelativeLayout>
  <RelativeLayout
      android:id="@+id/contentLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/titleLayout"
      android:layout_marginTop="20dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/contentEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:gravity="top"
        android:editable="false"/>
  </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="40dip"
      android:layout_below="@id/contentLayout">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/createTime"
          android:layout_centerVertical="true"
          android:layout_toLeftOf="@+id/createTimeTextView"
          android:layout_marginRight="10dp" />
      <TextView
          android:id="@+id/createTimeTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:layout_marginRight="20dip"/>
  </RelativeLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dip"
      android:layout_alignParentBottom="true"
      android:background="@drawable/back_normal">
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/save"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/delete"/>
  </LinearLayout>
</RelativeLayout>